<resources>
    <string name="app_name">Coste Viajes BOE</string>
    <string name="action_settings">Ayuda Grupos Profesionales</string>
    <string name="intro">Selecciona un País:</string>
    <string name="noches">Numero de noches de Hotel:</string>
    <string name="pers">Numero de personas:</string>
    <string name="toolbar">Calculadora Viajes Real Decreto</string>
    <string name="boton">Calcular Coste</string>
    <string name="grupo">Selecciona Grupo Profesional:</string>
    <string name="title_activity_resultado_coste_viaje">Resultado Coste Viaje</string>
    <string name="Resum1">Coste Máx Alojamiento: </string>
    <string name="Resum2">Coste Máx Manutención: </string>
    <string name="Resum3">Coste Máx Total: </string>
    <string name="Resum4">(*)Datos del RD 462/2002 (Última modificación 30/10/2015)Información sin valor jurídico</string>
    <string name="grupo1">Grupo Profesional 1</string>
    <string name="grupo2">Grupo Profesional 2</string>
    <string name="grupo3">Grupo Profesional 3</string>
    <string name="desgrupo1">Altos cargos incluidos en los artículos 25, 26 y 31.dos de la Ley 13/2000, de 28 de diciembre, Oficiales Generales, Magistrados del Tribunal Supremo y Presidentes de los Tribunales Superiores de Justicia, Embajadores, Ministros Plenipotenciarios de primera clase, Rectores de Universidad, Subdirectores generales, y Subdirectores generales adjuntos, así como cualquier otro cargo asimilado a los anteriores. En el supuesto de los Subdirectores generales adjuntos, la asimilación será acordada, en su caso, conjuntamente por los Ministerios de Hacienda y de Administraciones Públicas. </string>
    <string name="desgrupo2">Personal Militar de las Fuerzas Armadas y personal de los Cuerpos de la Guardia Civil y Nacional de Policía clasificados a efectos retributivos en los grupos A y B; Cuerpos únicos de las Carreras Judicial y Fiscal, Secretarios de la Administración de Justicia, Médicos Forenses, y Técnicos Facultativos; funcionarios de la Administración del Estado de Cuerpos o Escalas clasificados en los grupos A y B, así como cualquier otro personal asimilado a los anteriores. </string>
    <string name="desgrupo3">Personal Militar de las Fuerzas Armadas y personal de los Cuerpos de la Guardia Civil y Nacional de Policía clasificados a efectos retributivos en los grupos C y D; Oficiales, Auxiliares y Agentes, y personal de sus mismos índices multiplicadores, al servicio de la Administración de Justicia; funcionarios de la Administración del Estado de Cuerpos o Escalas clasificados en los grupos C, D y E, así como cualquier otro personal asimilado a los anteriores.</string>

</resources>
